--- a/toboggan/Gemfile
+++ b/toboggan/Gemfile
@@ -15,7 +15,7 @@ gem 'coffee-rails', '~> 4.0.0'
 # gem 'therubyracer',  platforms: :ruby
 
 # Use jquery as the JavaScript library
-gem 'jquery-rails'
+gem 'jquery-rails'#, '~> 2.3.0'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
@@ -25,6 +25,43 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
+gem 'jquery-ui-rails'
+gem 'devise'
+# Some setup you must do manually if you haven't yet:
+
+#   1. Ensure you have defined default url options in your environments files. Here
+#      is an example of default_url_options appropriate for a development environment
+#      in config/environments/development.rb:
+
+#        config.action_mailer.default_url_options = { host: 'localhost:3000' }
+
+#      In production, :host should be set to the actual host of your application.
+
+#   2. Ensure you have defined root_url to *something* in your config/routes.rb.
+#      For example:
+
+#        root to: "home#index"
+
+#   3. Ensure you have flash messages in app/views/layouts/application.html.erb.
+#      For example:
+
+#        <p class="notice"><%= notice %></p>
+#        <p class="alert"><%= alert %></p>
+
+#   4. If you are deploying on Heroku with Rails 3.2 only, you may want to set:
+
+#        config.assets.initialize_on_precompile = false
+
+#      On config/application.rb forcing your application to not access the DB
+#      or load models when precompiling your assets.
+#   5. You can copy Devise views (for customization) to your app by running:
+#        rails g devise:views
+group :test do
+gem 'rspec-rails'
+gem 'capybara'
+gem 'shoulda-matchers'
+end
+
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
