Trying to add tests; for some reason Natalie's JavaScript got lost...

--- a/toboggan/Gemfile
+++ b/toboggan/Gemfile
@@ -27,6 +27,7 @@ gem 'sdoc', '~> 0.4.0',          group: :doc
 gem 'spring',        group: :development
 gem 'jquery-ui-rails'
 gem 'devise'
+gem 'rspec-rails'
 
 
 gem 'travis'
