--- a/toboggan/Gemfile
+++ b/toboggan/Gemfile
@@ -62,6 +62,7 @@ gem 'travis'
 #        rails g devise:views
 group :test do
   gem 'rspec-rails'
+  gem 'selenium-webdriver'
   gem 'capybara'
   gem 'shoulda-matchers'
   gem 'factory_girl_rails'
