Implemented the skeleton for cron jobs and custom rake tasks

--- a/toboggan/Gemfile
+++ b/toboggan/Gemfile
@@ -29,6 +29,8 @@ gem 'jquery-ui-rails'
 gem 'devise'
 gem 'rspec-rails'
 
+gem 'whenever', :require => false
+
 
 gem 'travis'
 # Some setup you must do manually if you haven't yet:
