--- a/toboggan/Gemfile
+++ b/toboggan/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'twilio-ruby', '~> 3.11'
+gem 'twilio-ruby'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.1.4'
 # Use sqlite3 as the database for Active Record
@@ -13,22 +13,23 @@ gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.0.0'
 # See https://github.com/sstephenson/execjs#readme for more supported runtimes
 # gem 'therubyracer',  platforms: :ruby
-
+gem 'rest_client'
 # Use jquery as the JavaScript library
 gem 'jquery-rails'#, '~> 2.3.0'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.0'
+gem 'json'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0',          group: :doc
-
+gem 'dotenv-rails', :groups => [:development, :test]
 # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
 gem 'spring',        group: :development
 gem 'jquery-ui-rails'
 gem 'devise'
-gem 'rspec-rails'
 
+gem 'whenever', :require => false
 
 gem 'travis'
 # Some setup you must do manually if you haven't yet:
